# worldspawn

./: CMakeLists.txt  Makefile  README.md  build_binarydist.sh  build_contents.txt  compile_debug.sh  compile_release.sh  worldspawn.desktop
cmake/: FindGLIB.cmake  FindGTK2.cmake  FindGTK3.cmake  FindGtkGLExt.cmake  FindMinizip.cmake  FindPango.cmake
cmake/scripts/: package.cmake
contrib/: CMakeLists.txt  Makefile
contrib/brushexport/: Makefile  export.h  interface.cpp  plugin.cpp  support.h
contrib/prtview/: AboutDialog.cpp  Makefile  portals.cpp  portals.h  prtview.cpp  prtview.h
contrib/prtview/res/: PrtView.rc2
docs/: patchDefWS.md
include/: CMakeLists.txt  aboutmsg.h  crypt.h  defaults.h  dpkdeps.h  iarchive.h  ibrush.h  icamera.h  ieclass.h  ientity.h  ifilesystem.h  ifilter.h  igl.h  iglrender.h  igtkgl.h  iimage.h  imap.h  ioapi_buf.h  ioapi_mem.h  ipatch.h  irender.h  iscenegraph.h  iscriplib.h  iselection.h  ishaders.h  itexdef.h  itextures.h  iundo.h  mapfile.h  modelskin.h  moduleobserver.h  modulesystem.h  nameable.h  namespace.h  preferencesystem.cpp  preferencesystem.h  qerplugin.h  renderable.h  selectable.h  unzip.h  (+4 more)
libs/: CMakeLists.txt  Makefile  bytestreamutils.h  cmdlib.h  convert.h  dragplanes.h  eclasslib.h  entitylib.h  globaldefs.h  instancelib.h  maplib.h  mathlib.h  md5lib.h  picomodel.h  property.h  render.h  scenelib.h  selectionlib.h  shaderlib.h  str.h  stringio.h  transformlib.h  traverselib.h  typesystem.h  undolib.h  uniquenames.h  versionlib.h
libs/cmdlib/: Makefile  cmdlib.cpp
libs/container/: Makefile  array.h  cache.h  hashfunc.h  hashtable.cpp  hashtable.h
libs/ddslib/: Makefile  ddslib.c
libs/debugging/: Makefile  debugging.h
libs/etclib/: Makefile  etclib.c
libs/filematch/: Makefile
libs/generic/: CMakeLists.txt  Makefile  callback.cpp  callback.h  constant.cpp  constant.h  functional.h  object.h  static.cpp
libs/gtkutil/: CMakeLists.txt  Makefile  accelerator.cpp  accelerator.h  button.cpp  button.h  clipboard.cpp  clipboard.h  closure.h  container.h  cursor.cpp  cursor.h  dialog.cpp  dialog.h  entry.cpp  entry.h  filechooser.cpp  filechooser.h  frame.cpp  frame.h  glfont.cpp  glfont.h  glwidget.cpp  glwidget.h  idledraw.h  image.cpp  image.h  menu.cpp  menu.h  messagebox.cpp  messagebox.h  nonmodal.cpp  nonmodal.h  paned.cpp  paned.h  pointer.h  toolbar.cpp  toolbar.h  widget.cpp  widget.h  (+4 more)
libs/l_net/: Makefile  l_net.c  l_net.h  l_net_berkley.c  l_net_wins.c  l_net_wins.h
libs/uilib/: CMakeLists.txt  Makefile  uilib.cpp  uilib.h
plugins/: CMakeLists.txt  Makefile
plugins/archivepak/: Makefile
plugins/archivewad/: Makefile  archive.cpp  plugin.cpp
plugins/archivezip/: Makefile  archive.cpp  archive.h  pkzip.h  plugin.cpp  zlibstream.h
plugins/brushexport/: Makefile  callbacks.cpp  callbacks.h  export.cpp  export.h  interface.cpp  plugin.cpp  support.cpp
plugins/entity/: CMakeLists.txt  Makefile  angle.h  angles.h  colour.h  curve.h  doom3group.cpp  doom3group.h  eclassmodel.cpp  eclassmodel.h  entity.cpp  entity.h  filters.cpp  filters.h  generic.cpp  generic.h  group.cpp  group.h  keyobservers.h  light.cpp  light.h  miscmodel.cpp  miscmodel.h  model.h  modelskinkey.h  namedentity.h  namekeys.h  origin.h  plugin.cpp  prop_dynamic.cpp  prop_dynamic.h  rotation.h  scale.h  skincache.cpp  skincache.h  targetable.cpp  targetable.h
plugins/image/: Makefile  bmp.cpp  bmp.h  dds.cpp  dds.h  image.cpp  jpeg.cpp  jpeg.h  ktx.cpp  ktx.h  pcx.cpp  pcx.h  tga.cpp  tga.h
plugins/imagehl/: Makefile  mip.cpp  sprite.cpp
plugins/iqmmodel/: CMakeLists.txt  Makefile  iqm.cpp  iqm.h  modeliqm.def  plugin.cpp
plugins/mapq3/: CMakeLists.txt  Makefile  parse.cpp  parse.h  plugin.cpp  write.cpp  write.h
plugins/matsys/: Makefile  shaders.cpp
plugins/md3model/: model.h
plugins/model/: Makefile  model.cpp  model.h  plugin.cpp
plugins/prtview/: AboutDialog.cpp  ConfigDialog.cpp  LoadPortalFileDialog.cpp  Makefile  portals.cpp  portals.h  prtview.cpp
plugins/shaders/: CMakeLists.txt  Makefile  plugin.cpp  shaders.cpp  shaders.h
plugins/vfspk3/: Makefile  archive.cpp  archive.h  vfs.cpp  vfs.h  vfspk3.cpp
radiant/: CMakeLists.txt  Makefile  autosave.cpp  brush_primit.cpp  brush_primit.h  brushmanip.cpp  brushnode.h  brushtokens.h  build.cpp  camwindow.cpp  camwindow.h  commands.h  console.cpp  console.h  csg.cpp  dialog.cpp  eclass.cpp  entityinspector.h  environment.cpp  environment.h  error.cpp  filters.cpp  findtexturedialog.h  grid.cpp  grid.h  groupdialog.cpp  gtkdlgs.cpp  gtkdlgs.h  gtkmisc.cpp  gtkmisc.h  help.cpp  help.h  main.cpp  mainframe.cpp  mainframe.h  map.cpp  parse.cpp  patchdialog.cpp  patchdialog.h  patchmanip.cpp  (+33 more)
resources/: Makefile  WorldSpawn  defaultkeys.ini  global.xlink
src/: Makefile  autosave.cpp  autosave.h  brush.cpp  brush.h  brush_primit.cpp  brush_primit.h  brushmanip.cpp  brushmanip.h  brushmodule.cpp  brushmodule.h  brushnode.h  brushtokens.h  brushxml.h  build.cpp  build.h  camwindow.cpp  camwindow.h  commands.cpp  commands.h  console.cpp  console.h  csg.cpp  csg.h  dialog.cpp  dialog.h  eclass.cpp  eclass_def.cpp  eclass_doom3.cpp  eclass_fgd.cpp  eclass_xml.cpp  entity.cpp  entity.h  entityinspector.cpp  entitylist.cpp  entitylist.h  environment.cpp  error.cpp  error.h  feedback.cpp  (+94 more)
tools/: CMakeLists.txt  Makefile
tools/common/: aselib.c  bspfile.c  cmdlib.c  cmdlib.h  imagelib.c  imagelib.h  inout.c  inout.h  jpeg.c  l3dslib.c  matlib.c  matlib.h  md4.c  mutex.c  polylib.c  polylib.h  qfiles.h  scriplib.c  threads.c  trilib.c  vfs.c  vfs.h
tools/vmap/: brush.c  brush_primit.c  bsp.c  bsp_analyze.c  bsp_info.c  bsp_scale.c  bspfile_abstract.c  bspfile_ibsp.c  bspfile_rbsp.c  convert_ase.c  convert_bsp.c  convert_map.c  convert_obj.c  decals.c  exportents.c  facebsp.c  fixaas.c  fog.c  game__null.h  game_fte.h  help.c  image.c  leakfile.c  light.c  light_bounce.c  light_trace.c  light_ydnar.c  lightmaps.c  lightmaps_ydnar.c  main.c  map.c  mesh.c  model.c  patch.c  path_init.c  portals.c  prtfile.c  shaders.c  surface.c  surface_extra.c  (+9 more)
(+182 files in other folders)
